--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "cleanup-dependencies": "0.0.6",
     "d3": "^4.13.0",
     "leaflet": "^1.3.1",
-    "nodemon": "^1.17.5",
+    "nodemon": "^1.18.10",
     "prop-types": "^15.6.1",
     "react": "^15.6.2",
     "react-apollo": "^1.4.16",
@@ -17,7 +17,7 @@
   },
   "devDependencies": {
     "autoprefixer": "7.1.0",
-    "babel-core": "6.24.1",
+    "babel-core": "^6.26.3",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.0.0",
@@ -32,7 +32,7 @@
     "eslint-config-react-app": "^1.0.4",
     "eslint-loader": "1.7.1",
     "eslint-plugin-flowtype": "2.33.0",
-    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "5.0.3",
     "eslint-plugin-react": "7.0.1",
     "extract-text-webpack-plugin": "2.1.0",
